Ajout d'autres sources

--- a/rapport/sources.tex
+++ b/rapport/sources.tex
@@ -1,11 +1,31 @@
 Web
-Introduction généraliste à \\
+Introduction généraliste à ELK \\
 
 https://wooster.checkmy.ws/2014/04/elk-elasticsearch-logstash-kibana/
 
-Livres
+Explications sur les moteurs d'indexation/elasticsearch\\
+https://zestedesavoir.com/articles/120/elasticsearch-maintenant-en-version-14/
+
+
+
+Documentation de logstash\\
+http://logstash.net/docs/1.4.2/
+
+Documentation d'Elasticsearch\\
+http://www.elastic.co/guide/en/elasticsearch/reference/current/index.html\\
+http://www.elastic.co/guide/en/elasticsearch/guide/current/index.html
+
+
+
+Documentation de Kibana
+http://www.elastic.co/guide/en/kibana/current/
+https://github.com/elastic/kibana/tree/master/docs
+
+
+Livres\\
+The logstash book
 
 
 Vidéos
-Conférence de Jean Baptiste Favre, architecte réseau de blablacar.fr, à PSES 2014
+Conférence de Jean Baptiste Favre, architecte réseau de blablacar.fr, à PSES 2014\\
 http://numaparis.ubicast.tv/videos/kibana/
