Modification titre et glossaires

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -21,7 +21,7 @@
 %\usepackage[top=2.5cm,bottom=2.5cm,left=2.5cm,right=2.5cm]{geometry}
 %\hypersetup{pdfborder=0}
 
-\graphicspath{ {../images/} {/home/neodiablow/git/pt2015-web/rapports/images/} } % dossier img
+\graphicspath{ {../images/} } % dossier img
 
 \lstdefinestyle{python}
 {
@@ -99,10 +99,11 @@ xleftmargin=0.1\linewidth
 %Page remerciments
 \emph{\Large Remerciements}
 \\[2cm]
-Nous remercions Patrick Nourissier, notre tuteur, pour sa disponibilité, son 
-suivi, son aide et ses encouragements. 
+Remerciment 1
 \\[1cm]
-Nous remercions openssh de nous permettre d'optimiser nos horaires de travail.
+Remerciment 2
+\\[2cm]
+Remerciment 3
 
 
 %Page table des matières
@@ -121,6 +122,6 @@ Nous remercions openssh de nous permettre d'optimiser nos horaires de travail.
 \input{sources.tex}
 
 
-\printglossaries
+%\printglossaries
 
 \end{document}
