--- a/rapport/title.tex
+++ b/rapport/title.tex
@@ -11,7 +11,8 @@
 
 % Title
 \HRule \\[0.4cm]
-{ \huge \bfseries Architecture pour l'hébergement web à fort trafic \\[0.4cm] }
+{ \huge \bfseries Déploiement d'ELK pour l'analyse de log\\
+au CIRIL\\[0.4cm] }
 
 \HRule \\[1.5cm]
 
@@ -19,41 +20,37 @@
 \noindent
 \begin{minipage}{0.5\textwidth}
 \begin{flushleft} \large
-\emph{Auteurs:}\\
+\emph{Auteur:}\\
 François \textsc{Dupont}\\
-Gabriel \textsc{Giroud}\\
-Aymeric \textsc{Luc}\\
-Guillaume \textsc{Nonet}
 \end{flushleft}
 \end{minipage}%
 \begin{minipage}{0.5\textwidth}
 \begin{flushright} \large
 \emph{Tuteur:} \\
-Patrick \textsc{Nourissier}
+Vincent \textsc{Delove}
 \end{flushright}
 \end{minipage}
 
-\vfill
-
-{\Large Lundi 23 Mars 2015}
-\\[1cm]
+%
 
 \vfill
 
 \begin{figure}[h]
     \centering
-    \includegraphics[scale=0.7]{haproxy.png}
+    \includegraphics[scale=0.5]{logstash.png}
     %\hspace{10mm}
     \hfill
-    \includegraphics[width=0.5\textwidth]{nginx.png}
+    \includegraphics[scale=1]{kibana.png}
     \\[0.2cm]
-    \includegraphics[width=87px]{percona.png}
+    LOGO CIRIL
+   % \includegraphics[width=87px]{percona.png}
     %\hspace*{25mm}
-    \hfill
-    \includegraphics[scale=0.7]{debian.png}
+    \includegraphics[scale=0.6]{elasticsearch.png}
 \end{figure}
 
 % Bottom of the page
+\vfill
+{\Large \today}%Lundi 23 Mars 2015}
 
 \end{center}
 \end{titlepage}
