Ajout source pour tuto grok

--- a/rapport/sources.tex
+++ b/rapport/sources.tex
@@ -11,6 +11,10 @@ https://zestedesavoir.com/articles/120/elasticsearch-maintenant-en-version-14/
 Documentation de logstash\\
 http://logstash.net/docs/1.4.2/
 
+Debugger pour le filtre grok
+http://grokdebug.herokuapp.com/
+
+
 Documentation d'Elasticsearch\\
 http://www.elastic.co/guide/en/elasticsearch/reference/current/index.html\\
 http://www.elastic.co/guide/en/elasticsearch/guide/current/index.html
