--- a/rapport/logstash.tex
+++ b/rapport/logstash.tex
@@ -17,7 +17,13 @@ script after-install.sh
 cd logstash-1.4.2
 
 
-D'autres méthodes d'installation
+Création du path
+
+export PATH+=:/opt/logstash
+
+
+
+Dautres méthodes d'installation
 
 TODO
 %Ensuite un simple git clone https://github.com/elastic/logstash.git
